--- a/Home.html
+++ b/Home.html
@@ -106,7 +106,7 @@ function MM_swapImage() { //v3.0
 <div id="Navigation"><!--This is where the div tag for the Navigation bar starts-->	
 	
 	<div class="topnav">
-  		<a class="active" href="Home.html">Home</a><!--This is the active button which is linked externally within the CSS file-->
+  		<a class="active" href="index.html">Home</a><!--This is the active button which is linked externally within the CSS file-->
   		<a href="Journey To Mars.html">Journey To Mars</a>
   		<a href="Starship.html">Starship</a>
   		<a href="Falcon 9.html">Falcon 9</a>
