--- a/Falcon 9.html
+++ b/Falcon 9.html
@@ -105,7 +105,7 @@ var mygallery=new simpleGallery({
 	
 <div id="Navigation"><!--This is where the div tag for the Navigation bar starts-->	
 		<div class="topnav">
-  		<a href="Home.html">Home</a>
+  		<a href="index.html">Home</a>
   		<a href="Journey To Mars.html">Journey To Mars</a>
   		<a href="Starship.html">Starship</a>
   		<a class="active" href="Falcon 9.html">Falcon 9</a>  <!--This is the active button which is linked externally within the CSS file-->
