--- a/Starship.html
+++ b/Starship.html
@@ -71,7 +71,7 @@ function MM_swapImage() { //v3.0
 	
 <div id="Navigation"><!--This is where the div tag for the Navigation bar starts-->	
 		<div class="topnav">
-  		<a href="Home.html">Home</a>
+  		<a href="index.html">Home</a>
   		<a href="Journey To Mars.html">Journey To Mars</a>
   		<a class="active" href="Starship.html">Starship</a><!--This is the active button which is linked externally within the CSS file-->
   		<a href="Falcon 9.html">Falcon 9</a>
