Update Humans To Space.html

--- a/Humans To Space.html
+++ b/Humans To Space.html
@@ -60,7 +60,7 @@ function MM_swapImage() { //v3.0
 	
 <div id="Navigation"><!--This is where the div tag for the Navigation bar starts-->	
 		<div class="topnav">
-  		<a href="Home.html">Home</a>
+  		<a href="index.html">Home</a>
   		<a href="Journey To Mars.html">Journey To Mars</a>
   		<a href="Starship.html">Starship</a>
   		<a href="Falcon 9.html">Falcon 9</a>
