--- a/Falcon 9.html
+++ b/Falcon 9.html
@@ -54,7 +54,7 @@ function MM_swapImage() { //v3.0
 }
 </script>
 	<link rel="stylesheet" href="simplegallery.css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="jquery.touchSwipe.min.js"></script>
 
 <script type="text/javascript" src="simplegallery.js">
