--- a/Starship.html
+++ b/Starship.html
@@ -51,7 +51,7 @@ function MM_swapImage() { //v3.0
 }
 </script>
 	
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 
 <script type="text/javascript" src="jquery.magnifier.js">
 
